name:          cp2ville
version:       0.0.0
cabal-version: >= 1.8
build-type:    Simple

executable          cp2ville
    hs-source-dirs: .
    main-is:        Main.hs
    ghc-options:    -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
    extensions:     OverloadedStrings
    build-depends:  base  
                  , scotty
                  , postgresql-simple
                  , ssv
                  , transformers
                  , aeson
                  , text
                  , extra
